--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -106,58 +106,6 @@
     margin-top: 0;
   }
 
-  .icons {
-    align-items: center;
-    display: flex;
-    margin: 0;
-
-    .badge-notification,
-    .ring {
-      top: ($chip-padding-y / -2);
-    }
-
-    .fa {
-      height: auto;
-      width: auto;
-    }
-
-    .icon {
-      align-items: center;
-      border: 0;
-      border-radius: 50%;
-      color: inherit;
-      display: flex;
-      height: ($header-height - $header-padding-y * 2);
-      justify-content: center;
-      margin-left: $header-inner-spacer-x;
-      padding: 0;
-      width: ($header-height - $header-padding-y * 2);
-
-      @include focus-hover {
-        background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
-        border: 0;
-        color: inherit;
-      }
-
-      &:focus {
-        outline: 0;
-      }
-    }
-
-    .active .icon {
-      .drop-down-mode &,
-      .drop-down-visible & {
-        background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
-        border: 0;
-        color: inherit;
-
-        &::after {
-          display: none;
-        }
-      }
-    }
-  }
-
   .panel {
     margin-left: auto;
     order: 1;
@@ -184,6 +132,64 @@
     align-items: center;
     flex-wrap: nowrap;
     width: auto;
+  }
+}
+
+.d-header-icons {
+  align-items: center;
+  display: flex;
+  margin: 0;
+
+  .badge-notification {
+    min-width: ($font-size-base * $line-height-base);
+    top: ($chip-padding-y / -2);
+  }
+
+  .d-icon {
+    height: auto;
+    opacity: 1;
+    width: auto;
+  }
+
+  .icon {
+    align-items: center;
+    border: 0;
+    border-radius: 50%;
+    color: inherit;
+    display: flex;
+    height: ($header-height - $header-padding-y * 2);
+    justify-content: center;
+    margin-left: $header-inner-spacer-x;
+    padding: 0;
+    width: ($header-height - $header-padding-y * 2);
+
+    @include focus-hover {
+      background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
+      border: 0;
+      color: inherit;
+    }
+
+    &:focus {
+      outline: 0;
+    }
+  }
+
+  .active .icon {
+    .drop-down-mode &,
+    .drop-down-visible & {
+      background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
+      border: 0;
+      color: inherit;
+
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  .ring {
+    margin-right: 1px;
+    top: ($chip-padding-y / -2) !important;
   }
 }
 
